--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -3,7 +3,7 @@ annotation.processing.enabled.in.editor=false
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
-application.title=008_PojoComLombok
+application.title=010_PojoComLombok
 application.vendor=cidandrade
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
@@ -29,17 +29,19 @@ debug.test.modulepath=\
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/008_PojoComLombok.jar
+dist.jar=${dist.dir}/010_PojoComLombok.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
-dist.jlink.output=${dist.jlink.dir}/008_PojoComLombok
+dist.jlink.output=${dist.jlink.dir}/010_PojoComLombok
 endorsed.classpath=
 excludes=
-file.reference.lombok.jar=/usr/share/java/lombok.jar
+file.reference.biblioteca.jar=/usr/share/java/biblioteca.jar
+file.reference.lombok.jar=../../../../../usr/share/java/lombok.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.lombok.jar}
+    ${file.reference.lombok.jar}:\
+    ${file.reference.biblioteca.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -74,7 +76,7 @@ jlink.additionalmodules=
 # The jlink additional command line parameters
 jlink.additionalparam=
 jlink.launcher=true
-jlink.launcher.name=008_PojoComLombok
+jlink.launcher.name=010_PojoComLombok
 main.class=br.com.cidandrade.aulas.PojoApp
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
